[package]
name = "dbfs2"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Old RVFS (for backward compatibility) - not currently available
# rvfs = { git = "ssh://git@github.com/nusakom/rvfs.git", optional = true }

# New RVFS (vfscore) - os-module/rvfs workspace
# 注意 os-module/rvfs 是一个 workspace，包含 vfscore 子包
vfscore = { git = "https://github.com/os-module/rvfs.git", package = "vfscore", optional = true }

jammdb = { git = "ssh://git@github.com/nusakom/jammdb.git" }
#jammdb = {path = "../jammdb"}

spin = "0.9.2"
bitflags = "1.3.2"
# dbop = { git = "ssh://git@github.com:nusakom/dbop.git", optional = true }
# Temporarily disabled due to unavailable repository
# Re-enable when dbop repository is available
# preprint = { version = "0.1.0", optional = true }
onlyerror = { version = "0.1", default-features = false }
buddy_system_allocator = { version = "0.9.0" }

fuser = { git = "https://github.com/cberner/fuser", rev = "96b6f16", optional = true }
libc = { version = "0.2.51", optional = true }
core2 = { version = "0.4.0", default-features = false, optional = true }
memmap2 = { version = "0.5.10", optional = true }
downcast = { version = "0.11.0", optional = true }
rand = { version = "0.8.5", optional = true }
smallvec = { version = "1.6.1", optional = true }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.136", default-features = false, features = [
    "derive",
    "alloc",
] }
log = "0.4.17"

[features]
default = ["sli32k"]
# rvfs = ["dep:rvfs"]  # Not currently available
rvfs2 = ["dep:vfscore"]
rvfs2_demo = ["dep:vfscore"]
alien_integration = ["dep:vfscore"]  # Phase 1: Basic filesystem for Alien OS
fuse = [
    "rand",
    "fuser",
    "libc",
    "core2",
    "memmap2",
    "downcast",
    "fuser/abi-7-19",
    "fuser/abi-7-16",
    "fuser/abi-7-28",
    "smallvec",
]
# dbop = ["dep:dbop", "dep:preprint"]  # Temporarily disabled
sli512 = []
sli8k = []
sli4k = []
sli1k = []
sli32k = []

[dev-dependencies]
env_logger = "0.9.0"
dbfs2 = { path = ".", default-features = false, features = [
    "fuse",
    "rvfs2",
    "sli32k",
] }
clap = { version = "4.2.1", features = ["cargo", "derive"] }
